implement bottom navigation bar

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,6 +3,7 @@
   "classes": "Classes",
   "new_class": "+ Class",
   "classes_loading_error": "Error loading classes",
+  "students": "Students",
   "class_name": "Class name",
   "class_description": "Class description",
   "create_class": "Create Class",
