--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -3,6 +3,7 @@
   "classes": "Turmas",
   "new_class": "+ Turma",
   "classes_loading_error": "Erro ao carregar turmas",
+  "students": "Alunos",
   "class_name": "Nome da turma",
   "class_description": "Descrição da turma",
   "create_class": "Criar Turma",
